Changes
+++++++

0.2.20 (unreleased)
------
- add 'Account Management' link to home page ListGroup

0.1.92
------
- fix setting.DJANGO_DEBUG_TOOLBAR_ENABLED

0.1.91
------
- bump edc 0.5.50

0.1.90
------
- bump edc 0.5.49
- review index inheritance
- track locale from django-audit-fields

0.1.89
------
- bump edc 0.5.48

0.1.88
------
- add module edc-form-runners
- add custom form runners
- remove unused fields on subject visit, subject visit missed
- fix medication adherence form validator
- intecomm-form-validators 0.1.48
- bump edc 0.5.47

0.1.87
------
- Add additional area units to Health Economics: Property (#683)
    - add 'calculated_land_surface_area' field (standardised to m2)
    - add additional units: Decimals (1/100th of Acre), Sq. feet
    - convert 'land_surface_area' to decimal field
- bump edc 0.5.46

0.1.86
------
- fix issue with add_subjects_to_group where site id is lost
  when running on multisite server
- bump edc 0.5.44

0.1.85
------
- add util to add participants to an already randomized group.
- remove duplicate code (intecomm-rando)
- bump edc= 0.5.43

0.1.84
------
- bump edc 0.5.42

0.1.83
------
- bump edc 0.5.41
- tighten up appointment form validation (appt_status, appt_type, appt_timing)
  relative to randomization arm, tests
- location update form validation and tests

0.1.82
------
- bump edc 0.5.40
- clean up appt_type using migration, collapse 'hospital' into 'clinic'
- fix location update CRF metadata rule

0.1.80
------
- bump edc 0.5.39
- remove edc-reference

0.1.79
------
- bump edc 0.5.33
- migrations to change from edc-next-appointment to edc-appointment

0.1.78
------
- bump edc 0.5.32

0.1.77
------
- bump edc 0.5.31

0.1.76
------
- bump edc 0.5.30
- close appointment window gap for facility arm visits 1000->1010
- no longer require next_appointment CRF for community arm
- update tests for changes in edc, especially for changes to
  edc-appointment and appointment skipping.
- notes for migrations: