@@ -3,7 +3,9 @@ Changes
 
 0.2.20 (unreleased)
 ------
-- add 'Account Management' link to home page ListGroup
+- updates to home page ListGroup
+    - add 'Account Management' link
+    - change Switch Sites and Logout items from get to post
 
 0.1.92
 ------
